# embedded-cli

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
example/src/: serial_setup.rs
examples/uart/: Cargo.toml
examples/uart/src/: main.rs
examples/usb/: Cargo.toml  README.md
examples/usb/src/: main.rs  serial_setup.rs
src/: lib.rs
