[package]
name = "embedded-cli"
version = "0.1.0"
edition = "2021"
description = "A command line interface for embedded systems"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "command", "processor"]
authors = ["David Christopher Lynch <david.lynch.home@gmail.com>"]
repository = "https://github.com/dlly11/embedded-cli"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
command_processor = { git = "https://github.com/dlly11/command-processor.git" }
heapless = "0.7.0"
embedded-hal = "0.2.7"
nb = "1.1.0"

